--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 </div>
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-right">
-                        <li class="active"><a href="index.html">Home</a></li>
+                        <li class="active"><a href="https://ronikworld.github.io">Home</a></li>
                         <li class="dropdown"><a href="#">Pages <i class="fa fa-angle-down"></i></a>
                         <!--   <ul role="menu" class="sub-menu">
                                 <li><a href="aboutus.html">About</a></li>
@@ -71,8 +71,8 @@
                             </ul>
                           -->
                         </li>
-                        <li class="dropdown"><a href="blog.html">Blog <i class="fa fa-angle-down"></i></a>
-                            <!--<ul role="menu" class="sub-menu">
+                      <!--  <li class="dropdown"><a href="blog.html">Blog <i class="fa fa-angle-down"></i></a>
+                            <ul role="menu" class="sub-menu">
                                 <li><a href="blog.html">Blog Default</a></li>
                                 <li><a href="blogtwo.html">Timeline Blog</a></li>
                                 <li><a href="blogone.html">2 Columns + Right Sidebar</a></li>
@@ -80,10 +80,11 @@
                                 <li><a href="blogfour.html">Blog Masonary</a></li>
                                 <li><a href="blogdetails.html">Blog Details</a></li>
                             </ul>
-                            disable blog menu section -->
+
                         </li>
-                        <li class="dropdown"><a href="portfolio.html">Portfolio <i class="fa fa-angle-down"></i></a>
-                          <!--  <ul role="menu" class="sub-menu">
+                        disable blog menu section -->
+                        <!--  <li class="dropdown"><a href="portfolio.html">Portfolio <i class="fa fa-angle-down"></i></a>
+                          <ul role="menu" class="sub-menu">
                                 <li><a href="portfolio.html">Portfolio Default</a></li>
                                 <li><a href="portfoliofour.html">Isotope 3 Columns + Right Sidebar</a></li>
                                 <li><a href="portfolioone.html">3 Columns + Right Sidebar</a></li>
@@ -91,9 +92,10 @@
                                 <li><a href="portfoliothree.html">2 Columns</a></li>
                                 <li><a href="portfolio-details.html">Portfolio Details</a></li>
                             </ul>
-                            disable portfolio menu -->
                         </li>
-                        <li><a href="shortcodes.html ">Shortcodes</a></li>
+                          disable portfolio menu -->
+                        <!--  <li><a href="shortcodes.html ">Shortcodes</a></li>
+                          disable portfolio menu -->
                     </ul>
                 </div>
                 <div class="search">
