--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         <span class="icon-bar"></span>
                     </button>
 
-                    <a class="navbar-brand" href="index.html">
+                    <a class="navbar-brand" href="https://ronikworld.github.io">
                     	<h1><img src="images/logo.png" alt="logo"></h1>
                     </a>
 
