2 day upload some awesome line disable

--- a/index.html
+++ b/index.html
@@ -31,11 +31,12 @@
                 <div class="col-sm-12 overflow">
                    <div class="social-icons pull-right">
                         <ul class="nav nav-pills">
-                            <li><a href=""><i class="fa fa-facebook"></i></a></li>
-                            <li><a href=""><i class="fa fa-twitter"></i></a></li>
-                            <li><a href=""><i class="fa fa-google-plus"></i></a></li>
-                            <li><a href=""><i class="fa fa-dribbble"></i></a></li>
+                            <li><a href="https://www.facebook.com/ronikworld"><i class="fa fa-facebook"></i></a></li>
+                            <li><a href="https://www.twitter.com/ronikworld"><i class="fa fa-twitter"></i></a></li>
+                            <li><a href="https://www.google.com/+abdurrobronik"><i class="fa fa-google-plus"></i></a></li>
+                            <!--<li><a href=""><i class="fa fa-dribbble"></i></a></li>
                             <li><a href=""><i class="fa fa-linkedin"></i></a></li>
+                            social Icon disable for while -->
                         </ul>
                     </div>
                 </div>
@@ -58,8 +59,8 @@
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-right">
                         <li class="active"><a href="https://ronikworld.github.io">Home</a></li>
-                        <li class="dropdown"><a href="#">Pages <i class="fa fa-angle-down"></i></a>
-                        <!--   <ul role="menu" class="sub-menu">
+                      <!--  <li class="dropdown"><a href="#">Pages <i class="fa fa-angle-down"></i></a>
+                           <ul role="menu" class="sub-menu">
                                 <li><a href="aboutus.html">About</a></li>
                                 <li><a href="aboutus2.html">About 2</a></li>
                                 <li><a href="service.html">Services</a></li>
@@ -69,8 +70,9 @@
                                 <li><a href="404.html">404 error</a></li>
                                 <li><a href="coming-soon.html">Coming Soon</a></li>
                             </ul>
-                          -->
-                        </li>
+
+                        </li> pages disabled -->
+
                       <!--  <li class="dropdown"><a href="blog.html">Blog <i class="fa fa-angle-down"></i></a>
                             <ul role="menu" class="sub-menu">
                                 <li><a href="blog.html">Blog Default</a></li>
@@ -98,7 +100,7 @@
                           disable portfolio menu -->
                     </ul>
                 </div>
-                <div class="search">
+              <!--  <div class="search">
                     <form role="form">
                         <i class="fa fa-search"></i>
                         <div class="field-toggle">
@@ -106,9 +108,11 @@
                         </div>
                     </form>
                 </div>
+                search btn disabled-->
+
             </div>
         </div>
-    </header>
+  </header>
     <!--/#header-->
 
     <section id="home-slider">
@@ -172,7 +176,7 @@
              <div class="container">
                 <div class="row">
                     <div class="action take-tour">
-                        <div class="col-sm-7 wow fadeInLeft" data-wow-duration="500ms" data-wow-delay="300ms">
+                        <div class="col-sm-7 wow fadeInLeft bottom-separator" data-wow-duration="500ms" data-wow-delay="300ms">
                             <h1 class="title">Triangle Corporate Template</h1>
                             <p>A responsive, retina-ready &amp; wide multipurpose template.</p>
                         </div>
@@ -192,7 +196,7 @@
         <div class="container">
             <div class="row">
                 <div class="single-features">
-                    <div class="col-sm-5 wow fadeInLeft" data-wow-duration="500ms" data-wow-delay="300ms">
+                    <div class="col-sm-5 wow fadeInLeft bottom-separator" data-wow-duration="500ms" data-wow-delay="300ms">
                         <img src="images/home/image1.png" class="img-responsive" alt="">
                     </div>
                     <div class="col-sm-6 wow fadeInRight" data-wow-duration="500ms" data-wow-delay="300ms">
@@ -201,16 +205,16 @@
                     </div>
                 </div>
                 <div class="single-features">
-                    <div class="col-sm-6 col-sm-offset-1 align-right wow fadeInLeft" data-wow-duration="500ms" data-wow-delay="300ms">
+                    <div class="col-sm-6 col-sm-offset-1 align-right wow fadeInLeft bottom-separator" data-wow-duration="500ms" data-wow-delay="300ms">
                         <h2>Built for the Responsive Web</h2>
                         <P>Mollit eiusmod id chuck turducken laboris meatloaf pork loin tenderloin swine. Pancetta excepteur fugiat strip steak tri-tip. Swine salami eiusmod sint, ex id venison non. Fugiat ea jowl cillum meatloaf.</P>
                     </div>
-                    <div class="col-sm-5 wow fadeInRight" data-wow-duration="500ms" data-wow-delay="300ms">
+                    <div class="col-sm-5 wow fadeInRight " data-wow-duration="500ms" data-wow-delay="300ms">
                         <img src="images/home/image2.png" class="img-responsive" alt="">
                     </div>
                 </div>
                 <div class="single-features">
-                    <div class="col-sm-5 wow fadeInLeft" data-wow-duration="500ms" data-wow-delay="300ms">
+                    <div class="col-sm-5 wow fadeInLeft bottom-separator" data-wow-duration="500ms" data-wow-delay="300ms">
                         <img src="images/home/image3.png" class="img-responsive" alt="">
                     </div>
                     <div class="col-sm-6 wow fadeInRight" data-wow-duration="500ms" data-wow-delay="300ms">
@@ -291,7 +295,7 @@
                     <div class="contact-info bottom">
                         <h2>Contacts</h2>
                         <address>
-                        E-mail: <a href="mailto:abdurrob.ongkon.com">abdur rob</a> <br>
+                        E-mail: <a href="mailto:abdurrob.ongkon@gmail.com">abdur rob</a> <br>
                         Phone: +88 01710 404 666 <br>
                         </address>
 
